Added: Zoom property to index.html (as a temporary measure)

--- a/CPC/app.css
+++ b/CPC/app.css
@@ -15,8 +15,10 @@
 }
 
 
-
 .preferences-pane {
+    zoom: 0.7;
+    -moz-transform: scale(0.7);  /* zoom for Firefox */
+    -moz-transform-origin: 50% 0;  /* zoom for Firefox */
 
     display: flex;
     display: -webkit-box;
@@ -36,6 +38,9 @@
 
 
 .navigator-area {
+    zoom: 0.7;
+    -moz-transform: scale(0.7);  /* zoom for Firefox */
+    -moz-transform-origin: 0 0;  /* zoom for Firefox */
 
     flex: auto;
 
@@ -57,7 +62,6 @@
 .preference-control {
 
     /*background: yellowgreen;*/
-    padding: 5px;
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
