--- a/CPC/app.css
+++ b/CPC/app.css
@@ -65,13 +65,19 @@
     margin-top: 10px;
     margin-bottom: 10px;
     margin-left: 10px;
-    padding: 5px;
+    padding: 0.4em;
     /*line-height: 150px;*/
     /*color: white;*/
     /*font-weight: bold;*/
     /*font-size: 1em;*/
     /*text-align: center;*/
 }
+
+.checkbox{
+    padding-right: 2em;
+
+}
+
 
 
 .preference-control-label:hover {
