--- a/CPC/app.css
+++ b/CPC/app.css
@@ -10,8 +10,12 @@
     margin: 0;
     list-style: none;
 
-    -webkit-flex-flow: row wrap;
-    justify-content: space-around;
+    flex-direction: row;
+    -webkit-flex-direction: row;
+
+
+    /*-webkit-flex-flow: row wrap;*/
+    /*justify-content: space-around;*/
 }
 
 
@@ -28,8 +32,8 @@
 
     flex: auto;
 
-    flex-direction: row;
-    -webkit-flex-direction: row;
+    flex-direction: column;
+    -webkit-flex-direction: column;
 
     background: lightgrey;
     padding: 0;
