--- a/CPC/app.css
+++ b/CPC/app.css
@@ -124,6 +124,12 @@
     fill:darkred;
 }
 
-text:hover {
+
+text{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
     user-select: none;
 }
